--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
         {{ if site.github_username or site.codepen_username or site.twitter_username or site.email_address }}
         <div class="social">
             {{ if site.github_username }}<a href="http://github.com/{{ site.github_username }}" target="_blank">GitHub</a>{{ endif }}
-            {{ if site.bitbucket_username }}<a href="http://bitbucket.org{{ site.bitbucket_username }}" target="_blank">Bitbucket</a>{{ endif }}
+            {{ if site.bitbucket_username }}<a href="http://bitbucket.org/{{ site.bitbucket_username }}" target="_blank">Bitbucket</a>{{ endif }}
             {{ if site.twitter_username }}<a href="http://twitter.com/{{ site.twitter_username }}" target="_blank">Twitter</a>{{ endif }}
             {{ if site.email_address }}<a href="mailto:{{ site.email_address }}" target="_blank">Email</a>{{ endif }}
         </div>
